# revengeMusic

./: #README.md#  .#README.md  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  a.out  app  build.cmd  build.sh  libfmodL.so.8  main.cpp  revengeMusic
cmake/: FindFMOD.cmake  FindLibRt.cmake
fmod/api/lowlevel/lib/armhf/: libfmod.so.8
fmod/api/studio/lib/arm/: libfmodstudio.so.8  libfmodstudio.so.8.4  libfmodstudioL.so.8.4
fmod/api/studio/lib/armhf/: libfmodstudio.so.8.4  libfmodstudioL.so.8.4
fmod/api/studio/lib/x86/: libfmodstudio.so.8.4  libfmodstudioL.so.8.4
fmod/doc/FMOD Studio Programmers API for Linux/: index.html
include/: IPC.h  Logger.h  MessageQueue.h  Pipe.h  Sound.h  SysError.h
src/: #IPC.cpp#  IPC.cpp  Logger.cpp  MessageQueue.cpp  Sound.cpp  SysError.cpp  main.cpp
src/Linux/: Pipe.cpp
src/Windows/: Pipe.cpp
